# sand

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
crates/game/: Cargo.toml
crates/game/src/: action.rs  chunk.rs  direction.rs  draw_text_shadow.rs  game_state.rs  lib.rs  main.rs  position.rs  sandbox.rs  sandbox_actions.rs  sandbox_presets.rs  size.rs  world.rs  world_camera.rs  world_update.rs
crates/game/src/cell/: cell_state.rs  cell_type.rs  draw_cell.rs  mod.rs  rules.rs
crates/game/src/gen_world/: gen.rs
crates/game/src/world/: cell.rs  cell_group.rs  cell_pos.rs  chunk.rs  mod.rs  particle.rs  random.rs  true_mod.rs  update_chunk.rs  world_state.rs
crates/game/src/world/cell/: cell_state.rs  cell_template_builder.rs  cells.rs  cells_template.rs  config.rs  mod.rs  pos.rs  rules.rs
