[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "Apache-2.0-or-MIT"
edition = "2021"
repository = "https://github.com/defernus/card-survivors"
keywords = ["game"]

[workspace.dependencies]
macroquad = "0.4"
rayon = "1.10"
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }
nohash-hasher = "0.2"

# project packages
game = { version = "0.1.0", path = "./crates/game" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
