[package]
name = "game"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
macroquad.workspace = true
rayon.workspace = true
rand.workspace = true
nohash-hasher.workspace = true
strum.workspace = true
eyre.workspace = true
